@@ -1,5 +1,13 @@
 2009-01-23  David Gilbert  <david.gilbert@object-refinery.com>
 
+    Patch 2511330 by Peter Kolb:
+    * source/org/jfree/chart/renderer/category/LevelRenderer.java
+    (calculateItemWidth): Take into account seriesVisible flags,
+    (calculateBarW0): Likewise,
+    (drawItem): Likewise.
+
+2009-01-23  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/chart/renderer/category/LevelRenderer.java
     (LevelRenderer): Set default legend shape,
     (hashCode): New method.
